@@ -145,6 +145,8 @@ UI_EN = {
     UI_trait_secondwinddesc = "You know to push your body to its limits when heading towards danger.<br>If there are 3 zombies near you while you're exhausted or very tired, gain full endurance and restore fatigue.<br>Second Wind has a cooldown of 14 days, however it is halved if it didn't recover any fatigue.<br>+1 Fitness",
     UI_trait_motionsickness = "Motion Sickness",
     UI_trait_motionsicknessdesc = "You gain sickness while driving.<br>The amount of sickness gained depends on vehicle's speed.",
+	UI_trait_antigun = 'Anti-Gun Activist",
+	UI_trait_antigundesc = "You protest against guns and have no experience with them, making you worse at using them than others.<br>You take longer to aim, can not shoot far and become sad while using guns.<br>You receive 25% less aiming XP",
     UI_cannibal_early = "Butchered human flesh.<br>You aren't seriously considering eating this, are you?",
     UI_cannibal_familiar = "Butchered human flesh.",
     UI_cannibal_comfortable = "Butchered human flesh.<br>So scrumptious!",
